--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -97,17 +97,17 @@ header {
     background-color: #313131;
   }
   .logo {
-    font-size: 28px;
-
-    position: absolute;
-    top: 20px;
-    left: 30px;
+    font-size: rem(28, 14);
 
     display: block;
 
     text-transform: uppercase;
     a {
       text-decoration: none;
+    }
+    span {
+      font-family: $fiblc;
+      line-height: 1;
     }
     .logo-white {
       color: #fff;
@@ -117,6 +117,7 @@ header {
     }
   }
 }
+
 nav {
   ul {
     display: block;
@@ -125,11 +126,28 @@ nav {
 
     @extend .clearfix;
     li {
+      font-family: $fibb;
+
       display: inline-block;
+
+      margin: 0 15px;
+      &:first-child {
+        margin-left: 0;
+      }
+      &:last-child {
+        margin-right: 0;
+      }
     }
   }
   .headnav {
-    width: $width / 5;
+    font-size: 1rem;
+
+    text-transform: uppercase;
+    a {
+      text-decoration: none;
+
+      color: #fff;
+    }
   }
 }
 
