--- a/assets/sass/import/_variables.scss
+++ b/assets/sass/import/_variables.scss
@@ -40,7 +40,7 @@ $light-gray: #a4a4a4;
 
 // Font Colors
 $base-font-color: $dark-gray;
-$action-color: $blue;
+$action-color: $red;
 
 // Border
 $base-border-color: $light-gray;
