--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -101,10 +101,12 @@ header {
 
     display: block;
 
-    padding-top: 3px;
+    padding-top: 11px;
 
     text-transform: uppercase;
     a {
+      display: block;
+
       text-decoration: none;
     }
     span {
@@ -167,13 +169,133 @@ section {
 article {
   @extend .clearfix;
 }
+aside {
+  background-color: #f5f5f2;
+  &.col-md-4 {
+    padding: 0;
+  }
+  .widget {
+    padding: 30px 30px 0;
+    h6 {
+      font-family: $fibc;
+      font-size: 18px;
+
+      margin: 0 -30px 30px;
+      padding: 0 30px 25px;
+
+      text-transform: uppercase;
+
+      color: $dark-gray;
+      border-bottom: 1px dotted #cececc;
+    }
+    &:last-child {
+      padding-bottom: 30px;
+    }
+  }
+  .widget_search {
+    .search-input {
+      width: 95%;
+    }
+  }
+  .widget-last-news {
+    li {
+      margin: 0 -30px;
+      padding: 20px 30px;
+
+      border-bottom: 1px dotted #cececc;
+      h4 {
+        a {
+          font-family: $fibc;
+          font-size: 18px;
+
+          margin: 0 0 18px;
+
+          text-transform: uppercase;
+
+          color: $dark-gray;
+          &:hover {
+            text-decoration: none;
+
+            color: $red;
+          }
+        }
+      }
+      .comments {
+        font-size: 12px;
+
+        color: #8d8d8d;
+      }
+      &:first-child {
+        padding-top: 0;
+      }
+    }
+  }
+}
 .looper {
   @extend .clearfix;
 }
 .home-slider {
   margin: 0 auto 5px;
 }
+.single-cat-title {
+  font-family: $fibb;
+  font-size: 20px;
 
+  margin: 0 0 20px;
+
+  text-transform: uppercase;
+
+  color: $dark-gray;
+  a {
+    text-decoration: none;
+
+    color: $dark-gray;
+  }
+}
+.single-title {
+  font-family: $fibb;
+  font-size: 32px;
+
+  margin: 0 0 20px;
+  padding: 0 0 20px;
+
+  text-transform: uppercase;
+
+  color: $red;
+  border-bottom: 5px solid $red;
+}
+.related-block {
+  h6 {
+    font-family: $fibc;
+    font-size: 18px;
+
+    margin: 0 0 20px;
+    padding: 0 0 20px;
+
+    text-transform: uppercase;
+
+    color: $dark-gray;
+    border-bottom: 5px solid $red;
+  }
+  .related-block-inner {
+    font-size: 15px;
+
+    opacity: .9;
+    a {
+      font-family: $fibb;
+
+      color: $dark-gray;
+    }
+    img {
+      width: 100%;
+      height: 150px;
+      margin: 0 0 15px;
+    }
+    &:hover {
+      opacity: 1;
+    }
+  }
+}
 footer {
   height: $footer;
   margin: $footer_margin auto 0;
@@ -210,8 +332,11 @@ footer {
       font-family: $fir;
 
       color: $light-gray;
+      border-bottom: 1px dotted transparent;
       &:hover {
         text-decoration: none;
+
+        border-color: $orange;
       }
     }
   }
