--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -231,11 +231,127 @@ aside {
     }
   }
 }
+.category-looper {
+  .looper {
+    overflow: hidden;
+
+    height: 135px;
+    margin-bottom: 15px;
+    padding-bottom: 15px;
+    padding-left: 0;
+
+    border-bottom: 1px dotted #cececc;
+    .feature-img {
+      float: left;
+      overflow: hidden;
+
+      width: 150px;
+      height: 120px;
+      margin: 0;
+      img {
+        width: 100%;
+      }
+    }
+    h2 {
+      font-size: 17px;
+
+      position: relative;
+
+      float: right;
+
+      width: 170px;
+      height: 100%;
+      a {
+        display: block;
+
+        width: 100%;
+        padding-left: 15px;
+
+        text-align: center;
+        text-align: left;
+
+        color: $dark-gray;
+
+        @extend .align-center;
+        &:hover {
+          color: $red;
+        }
+      }
+    }
+    p {
+      display: none;
+    }
+    &:nth-child(1),
+    &:nth-child(5),
+    &:nth-child(9) {
+      height: 435px;
+      padding-left: 15px;
+
+      border-color: transparent;
+      .feature-img {
+        display: block;
+        float: none;
+
+        width: 100%;
+        height: 220px;
+        margin: 0 0 20px;
+        img {
+          width: 100%;
+          min-height: 220px;
+        }
+      }
+      h2 {
+        font-size: 18px;
+
+        float: none;
+
+        width: auto;
+        height: auto;
+        margin: 0 0 20px;
+        a {
+          position: relative;
+          top: 0;
+          left: 0;
+
+          display: inline;
+
+          width: auto;
+          padding: 0;
+
+          transform: none;
+          text-decoration: none;
+
+          color: $red;
+        }
+      }
+      p {
+        display: block;
+      }
+    }
+  }
+}
 .looper {
   @extend .clearfix;
 }
 .home-slider {
   margin: 0 auto 5px;
+}
+.cat-title {
+  font-family: $fiblc;
+  font-size: 22px;
+
+  margin: 0 0 20px;
+  padding: 0 0 20px;
+
+  text-transform: uppercase;
+
+  color: $dark-gray;
+  border-bottom: 6px solid $red;
+  a {
+    text-decoration: none;
+
+    color: $dark-gray;
+  }
 }
 .single-cat-title {
   font-family: $fibb;
@@ -296,6 +412,41 @@ aside {
     }
   }
 }
+.pagination-row {
+  padding: 0 15px;
+}
+.pagination {
+  padding: 10px 0 15px;
+
+  text-align: center;
+
+  background-color: #fafafa;
+  a,
+  span {
+    font-size: 15px;
+
+    margin: 0 5px;
+    padding-bottom: 10px;
+
+    text-decoration: none;
+
+    color: $dark-gray;
+    border-bottom: 5px solid transparent;
+    &.current {
+      font-weight: $f-xbold;
+
+      border-color: $orange;
+    }
+    &.next,
+    &.prev {
+      font-weight: $f-bold;
+    }
+    &:hover {
+      color: $red;
+    }
+  }
+}
+
 footer {
   height: $footer;
   margin: $footer_margin auto 0;
