--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -168,6 +168,70 @@ section {
 }
 article {
   @extend .clearfix;
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    font-family: $fibc;
+
+    color: $dark-gray;
+  }
+  h1 {
+    font-size: 200%;
+  }
+  h2 {
+    font-size: 180%;
+  }
+  h3 {
+    font-size: 160%;
+  }
+  h4 {
+    font-size: 140%;
+  }
+  h5 {
+    font-size: 130%;
+  }
+  h6 {
+    font-size: 110%;
+  }
+  ul,
+  ol {
+    padding: 0 0 0 36px;
+    li {
+      margin: 0 0 5px;
+    }
+  }
+  ul {
+    list-style-type: decimal;
+    li {
+      &:before {
+        display: none;
+      }
+    }
+  }
+  ol {
+    padding: 0 0 0 18px;
+
+    list-style: none;
+    li {
+      text-indent: 6px;
+      &:before {
+        font-size: 150%;
+        font-weight: bold;
+
+        display: inline;
+
+        margin-right: 10px;
+        margin-left: -10px;
+
+        content: '• ';
+
+        color: $red;
+      }
+    }
+  }
 }
 aside {
   background-color: #f5f5f2;
@@ -274,6 +338,8 @@ aside {
 
         @extend .align-center;
         &:hover {
+          text-decoration: none;
+
           color: $red;
         }
       }
@@ -322,6 +388,9 @@ aside {
           text-decoration: none;
 
           color: $red;
+          &:hover {
+            color: $dark-gray;
+          }
         }
       }
       p {
@@ -410,6 +479,22 @@ aside {
     &:hover {
       opacity: 1;
     }
+  }
+}
+.cat-description {
+  padding: 30px 0 0;
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    font-family: $fibc;
+    font-size: 18px;
+
+    margin: 0 0 18px;
+
+    color: $dark-gray;
   }
 }
 .pagination-row {
