--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -405,6 +405,7 @@ aside {
 }
 .home-slider {
   margin: 0 auto 5px;
+  padding-right: 0;
 }
 .pgwSlider {
   overflow: hidden;
@@ -412,6 +413,9 @@ aside {
   height: 360px;
   .ps-current {
     width: 66%;
+    ul {
+      /* overflow: hidden; */
+    }
     .ps-caption {
       font-family: $fibc;
       font-size: 24px;
@@ -450,14 +454,49 @@ aside {
     width: 32.7%;
     li {
       background-color: #e3e3df;
+      position: relative;
+      overflow: visible;
+      &:before {
+        position: absolute;
+        left: -6px;
+        top: 50%;
+        opacity: 0;
+        margin-top: -8px;
+        @extend .dblock;
+        @include triangle(16px 8px, $red, left);
+      }
       img {
         display: none;
       }
-      span {
-        color: $dark-gray;
+      a {
+        position: relative;
+
         display: block;
+
+        width: 100%;
+        height: 100%;
+      }
+      span {
+        font-family: $fibb;
+        font-size: 15px;
+
+        display: block;
+
         width: 80%;
+
+        color: $dark-gray;
         background-color: transparent;
+
+        @extend .align-center;
+      }
+      &.current-slide {
+        background-color: $red;
+        &:before {
+          opacity: 1;
+        }
+        span {
+          color: #fff;
+        }
       }
     }
   }
