--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -70,6 +70,13 @@ picture {
   max-width: 100%;
   margin: 0;
 }
+table {
+  td {
+    padding: 5px;
+
+    border: 1px solid #a4a4a4;
+  }
+}
 .wrapper {
   position: relative;
 
@@ -167,6 +174,7 @@ section {
     background-color: #fff;
   }
 }
+.cat-description,
 article {
   @extend .clearfix;
   h1,
@@ -200,11 +208,12 @@ article {
   ul,
   ol {
     padding: 0 0 0 36px;
+    margin-bottom: 18px;
     li {
-      margin: 0 0 5px;
+      margin: 0;
     }
   }
-  ul {
+  ol {
     list-style-type: decimal;
     li {
       &:before {
@@ -212,26 +221,36 @@ article {
       }
     }
   }
-  ol {
+  ul {
     padding: 0 0 0 18px;
 
     list-style: none;
     li {
-      text-indent: 6px;
+      position: relative;
+
+      padding: 0 0 0 18px;
       &:before {
         font-size: 150%;
-        font-weight: bold;
+        font-weight: 700;
 
-        display: inline;
+        position: absolute;
+        top: -5px;
+        left: -6px;
 
-        margin-right: 10px;
-        margin-left: -10px;
-
-        content: '• ';
+        content: '•';
 
         color: $red;
       }
     }
+  }
+  blockquote {
+    font-family: $fiblc;
+
+    margin: 0 0 18px;
+    padding: 18px 18px 18px 36px;
+
+    border-left: 5px solid $red;
+    background-color: lighten($red, 30%);
   }
 }
 aside {
@@ -315,22 +334,23 @@ aside {
       margin: 0;
       img {
         width: 100%;
+        height: 100%;
       }
     }
     h2 {
-      font-size: 17px;
+      font-size: 13px;
 
       position: relative;
 
       float: right;
 
-      width: 170px;
+      width: 180px;
       height: 100%;
       a {
         display: block;
 
         width: 100%;
-        padding-left: 15px;
+        /* padding-left: 15px; */
 
         text-align: center;
         text-align: left;
@@ -396,8 +416,21 @@ aside {
       }
       p {
         display: block;
+        overflow: hidden;
+
+        height: 126px;
       }
     }
+  }
+}
+.view-article {
+  text-decoration: none;
+
+  color: #000;
+  &:hover {
+    text-decoration: none;
+
+    color: #000;
   }
 }
 .looper {
@@ -453,15 +486,20 @@ aside {
   .ps-list {
     width: 32.7%;
     li {
-      background-color: #e3e3df;
       position: relative;
+
       overflow: visible;
+
+      background-color: #e3e3df;
       &:before {
         position: absolute;
-        left: -6px;
         top: 50%;
-        opacity: 0;
+        left: -6px;
+
         margin-top: -8px;
+
+        opacity: 0;
+
         @extend .dblock;
         @include triangle(16px 8px, $red, left);
       }
