--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -252,7 +252,19 @@ article {
     border-left: 5px solid $red;
     background-color: lighten($red, 30%);
   }
+
 }
+div,
+article {
+  &.hentry ,
+  &.cat-description,
+  &.type-post {
+      img {
+    border: 5px solid $red;
+  }
+  }
+}
+
 aside {
   background-color: #f5f5f2;
   &.col-md-4 {
@@ -335,6 +347,7 @@ aside {
       img {
         width: 100%;
         height: 100%;
+        border: 0;
       }
     }
     h2 {
@@ -622,6 +635,7 @@ aside {
       width: 100%;
       height: 150px;
       margin: 0 0 15px;
+      border: 0;
     }
     &:hover {
       opacity: 1;
